# camunda-external-task-client-rust

./: .gitignore  Cargo.toml  README.md
examples/granting-loans/: Cargo.toml  README.md
examples/granting-loans/src/: main.rs
examples/order/: Cargo.toml  README.md
examples/order/src/: main.rs
src/: error.rs  lib.rs
src/client/: client.rs  config.rs  mod.rs  subscription.rs
src/service/: engine_service.rs  mod.rs  model.rs
